# matam

./: .gitmodules  .travis.yml  Dockerfile  README.md  build.py  build.sh  environment.yml  get_default_db.sh  index_default_ssu_rrna_db.py  pytest.ini  requirements.txt  travis_build.sh  travis_download_db.sh
conda_recipe/: build.sh  meta.yaml
db/: .gitignore  SILVA_123_SSURef_rdNs_NR95.fasta  SILVA_123_SSURef_rdNs_NR95.tar.bz2  SILVA_128_SSURef_rdNs_NR95.tar.bz2
eval_and_release/: README.html  README.md
eval_and_release/dataset/: 16sp_simulated_dataset
eval_and_release/test_docker/: run_tests.sh
eval_and_release/test_matam/: compare_matam_versions.ipynb  run_matam_multiple_times_releases.sh
examples/16sp_simulated_dataset/: 16sp.art_HS25_pe_100bp_50x.fq  16sp.fasta  16sp.taxo.tab
ovgraphbuild/: CMakeLists.txt
ovgraphbuild/src/: TransitionMatrix.cpp  TransitionMatrix.h  alignmentsComparison.cpp  alignmentsComparison.h  assemblyStatistics.cpp  assemblyStatistics.h  compatibilityGraph.h  compatibilityGraphBuilding.cpp  compatibilityGraphBuilding.h  optionsParser.cpp  optionsParser.h  ovgraphbuild.cpp  seqanObjectsFormating.cpp  seqanObjectsFormating.h  swissKnife.cpp  swissKnife.h
scripts/: assembler_factory.py  binary_utils.py  component_assembly.py  components_assembly.py  compute_abundance.py  compute_assembly_stats.py  compute_compressed_graph_stats.py  compute_contigs_compatibility.py  compute_lca_from_tab.py  compute_pairwise_distance_matrix.py  compute_ref_coverage_histogram.py  compute_stats_from_lca.py  evaluate_assembly.py  exonerate_to_sam.py  extract_taxo_assign_from_RDP.py  extract_taxo_from_fasta.py  fasta_2_tab.py  fasta_clean_name.py  fasta_get_lengths.py  fasta_length_filter.py  fasta_name_filter.py  fasta_utils.py  fastq_get_pairs.py  fastq_name_filter.py  fastq_restore_pairs.py  fastq_to_fasta.py  fastq_to_tab.py  fastq_utils.py  filter_sam_based_on_blast.py  filter_sam_by_coverage.py  filter_sam_by_pid.py  filter_score_multialign.py  find_least_number_ref_in_blast.py  generate_scaffolding_blast.py  get_HMP_OTU_psn.py  get_best_matches_from_blast.py  get_taxonomy_from_species_name.py  index_ref_db.py  krona.py  matam.py  (+17 more)
tests/: test_binaries_utils.py  test_compute_abundance.py  test_functional.py  test_functionnal.py  test_krona.py  test_rdp.py  test_sample_sam_by_coverage.py
tests/sample/: krona.txt  rdp.txt  scaffolds.blast  scaffolds.fa  scaffolds_multiple_reads.blast  simple.sam
(+2 files in other folders)
